<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RegistrationAct" />

        <EditText
            android:id="@+id/ETUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:hint="@string/hint_AR_ET_Username"
            android:layout_weight="1" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cboxAuthType"
            android:text="@string/AR_cboxAuthType"/>

        <EditText
            android:id="@+id/ETPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:hint="@string/hint_AR_ET_Password"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSaveUser"
            android:text="@string/AR_btnSaveUser"
            android:layout_gravity="center"
            android:maxLength="15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>




